<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <!-- Image with overlay and text -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <!-- Background Image -->
        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <!-- Dark Overlay -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#98000000" />

        <!-- Text Overlay -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_title"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Profile Section -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp">
            <!-- Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/anggota_1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- ID -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/npm_1"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp">
            <!-- Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/anggota_2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- ID -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/npm_2"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp">
            <!-- Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/anggota_3"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp" />

            <!-- ID -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/npm_3"
                android:textSize="14sp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
